hphp/hack/test/enum_supertyping/typing/function_argument_2.bad.php.exp
File "function_argument_2.bad.php", line 20, characters 12-21:
Invalid argument (Typing[4110])
  File "function_argument_2.bad.php", line 16, characters 14-22:
  Expected `SuperEnum`
  File "function_argument_2.bad.php", line 8, characters 22-24:
  But got `int`
